Fixes image replacement and star ratings on mobile

--- a/styles/modules/listings.sass
+++ b/styles/modules/listings.sass
@@ -41,13 +41,9 @@
 .job-sponsored
 	color: $indeed-promo
 
-.filled,
-.empty
-	font-style: normal
-.filled
-	color: orange
-.empty
-	color: lightgrey
+.job-rating
+	i
+		margin-right: 1px
 
 .listings-resume
 	font-size: 16px
