--- a/styles/style.css
+++ b/styles/style.css
@@ -6081,15 +6081,8 @@ header {
 .job-sponsored {
   color: #CD29C0; }
 
-.filled,
-.empty {
-  font-style: normal; }
-
-.filled {
-  color: orange; }
-
-.empty {
-  color: lightgrey; }
+.job-rating i {
+  margin-right: 1px; }
 
 .listings-resume {
   font-size: 16px;
